syntax = "proto2";

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "com.xtrader.protocol.proto.commons.model";
option java_outer_classname = "ContainerCommonModelMessages";

// Enum for payload type
enum ProtoPayloadType {
    PROTO_MESSAGE = 5;
    PROTO_SERVER_DEPTH_QUOTES_EVENT = 2;
    PROTO_SERVER_SPOT_EVENT = 3;
    PROTO_SERVER_DEPTH_EVENT = 4;
    PROTO_SERVER_TRAILING_SL_CHANGED_EVENT = 6;
    PROTO_SERVER_MARKET_DATA_EVENT = 7;
    ERROR_RES = 50;
    HEARTBEAT_EVENT = 51;
    PING_REQ = 52;
    PING_RES = 53;
    REGISTER_CSERVER_CONNECTION_REQ = 54;
    REGISTER_CSERVER_CONNECTION_RES = 55;
    UNREGISTER_CSERVER_CONNECTION_REQ = 56;
    UNREGISTER_CSERVER_CONNECTION_RES = 57;
    REGISTER_CID_CONNECTION_REQ = 58;
    REGISTER_CID_CONNECTION_RES = 59;
    UNREGISTER_CID_CONNECTION_REQ = 60;
    UNREGISTER_CID_CONNECTION_RES = 61;
}

// Enum for error code
enum ProtoErrorCode {
    UNKNOWN_ERROR = 1;
    UNSUPPORTED_MESSAGE = 2;
    INVALID_REQUEST = 3;
    WRONG_PASSWORD = 4;
    TIMEOUT_ERROR = 5;
    ENTITY_NOT_FOUND = 6;
    CANT_ROUTE_REQUEST = 7;
    FRAME_TOO_LONG = 8;
    MARKET_CLOSED = 9;
    CONCURRENT_MODIFICATION = 10;
    BLOCKED_PAYLOAD_TYPE = 11;
    DATASTORE_IS_NOT_AVAILABLE = 12;
}

// Type for range
message ProtoIntRange {
    optional int32 from = 1; // Start of the range
    optional int32 to = 2; // End of the range
}

// Type for range (long)
message ProtoLongRange {
    optional int64 from = 1; // Start of the range
    optional int64 to = 2; // End of the range
}

// Type for double range
message ProtoDoubleRange {
    optional double from = 1; // Start of the range
    optional double to = 2; // End of the range
}

// Type for geo info
message ProtoGeoInfo {
    optional string countryIsoCode = 1; // Country ISO code
    optional string cityName = 2; // City name
}
